fix(SinglesigDIP): update code (.query())